# pyglotaran-examples

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action.yml  example_commit_sha.txt  pyglotaran_commit_sha.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: requirements_ci.txt
assets/: pyglotaran_analysis_flow.dio  spirulina_sequential.dio
binder/: environment.yml
case_studies/: run_case_study.py
ex_spectral_guidance/: dataset1.nc  dataset2.nc  initial_parameters.csv  model.yml  optimization_history.csv  optimized_parameters.csv  parameter_history.csv  result.md  result.yml  scheme.yml
ex_two_datasets/: dataset1.nc  dataset2.nc  initial_parameters.csv  model.yml  optimization_history.csv  optimized_parameters.csv  parameter_history.csv  result.md  result.yml  scheme.yml
examples/: run_example.py
pyglotaran_examples/: __init__.py  boilerplate.py
quick_start/: example_read_data.ipynb  gta_regexp.ipynb  model.yml  parameter.yml  quickstart.py
quickstart/: model.yaml  parameters.yaml  quickstart.ipynb
scripts/: run_examples.py  run_examples_notebooks.py
simultaneous_analysis_3d_disp/: dataset1.nc  dataset2.nc  dataset3.nc  initial_parameters.csv  model.yml  optimization_history.csv  optimized_parameters.csv  parameter_history.csv  result.md  result.yml  scheme.yml
simultaneous_analysis_3d_nodisp/: dataset1.nc  dataset2.nc  dataset3.nc  initial_parameters.csv  model.yml  optimization_history.csv  optimized_parameters.csv  parameter_history.csv  result.md  result.yml  scheme.yml
simultaneous_analysis_6d_disp/: model.yml  (+13 more)
(+295 files in other folders)
