[metadata]
name = pyglotaran_examples
version = attr: pyglotaran_examples.__version__
description = Supplementary package for pyglotaran with (example) plotting code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran-examples
author = Joris Snellenburg, Ivo van Stokkum
author_email = j.snellenburg@gmail.com, i.h.m.van.stokkum@vu.nl
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
project_urls =
    GloTarAn Ecosystem=https://glotaran.org
    Source=https://github.com/glotaran/pyglotaran-examples
    Tracker=https://github.com/glotaran/pyglotaran-examples/issues

[options]
packages = find:
install_requires =
    jupyterlab>=3.0.0
    matplotlib>=3.3.0
    pyglotaran>=0.3.0
python_requires = >=3.8,<3.10
zip_safe = True

[flake8]
extend-ignore = E231, E203
max-line-length = 99
per-file-ignores =
    scripts/run_examples.py: F401
